--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "rewire": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:chrome": "node ./scripts/build.js && npm run clean",
+    "clean": "cd build && mv static/js/*.js chunk.js && mv static/css/*.css main.css && rm -r static/js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
