--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "manifest_version": 3,
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "./js/background.js"
   },
   "action": {
     "default_icon": {
@@ -21,12 +21,12 @@
         "<all_urls>"
       ],
       "js": [
-        "./main.js",
-        "./content.js",
-        "./chunk.js"
+        "./js/main.js",
+        "./js/content.js",
+        "./js/chunk.js"
       ],
       "css": [
-        "./main.css"
+        "./css/main.css"
       ],
       "run_at": "document_end"
     }
