--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,9 +8,9 @@
   },
   "action": {
     "default_icon": {
-      "16": "images/icon16.png",
-      "24": "images/icon24.png",
-      "32": "images/icon32.png"
+      "16": "images/icons/icon16.png",
+      "24": "images/icons/icon24.png",
+      "32": "images/icons/icon32.png"
     },
     "default_title": "Click Me",
     "default_popup": "index.html"
@@ -37,9 +37,9 @@
     "tabs"
   ],
   "icons": {
-    "16": "./images/icon16.png",
-    "48": "./images/icon48.png",
-    "128": "./images/icon128.png"
+    "16": "./images/icons/icon16.png",
+    "48": "./images/icons/icon48.png",
+    "128": "./images/icons/icon128.png"
   },
   "host_permissions": [
     "*://*.amazon.com/"
