--- a/public/manifest.json
+++ b/public/manifest.json
@@ -32,7 +32,8 @@
   "permissions": [
     "activeTab",
     "storage",
-    "tabs"
+    "tabs",
+    "scripting"
   ],
   "icons": {
     "16": "./images/icons/icon16.png",
@@ -51,11 +52,15 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "/images/*"
+        "/images/*",
+        "/inject.js"
       ],
       "matches": [
         "<all_urls>"
       ]
     }
-  ]
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  }
 }
